# mrclient

./: .gitignore  CMakeLists.txt  Makefile  main.c
cmake/: FindNcurses.cmake  FindNcursesw.cmake
